--- a/inference/package.xml
+++ b/inference/package.xml
@@ -12,6 +12,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>torch</exec_depend>
   <exec_depend>torchvision</exec_depend>
   <exec_depend>numpy</exec_depend>
